--- a/app/src/main/res/layout/activity_student_page.xml
+++ b/app/src/main/res/layout/activity_student_page.xml
@@ -16,8 +16,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/subjectRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        app:layout_constraintTop_toBottomOf="@+id/greetTextView"
-        tools:layout_editor_absoluteX="150dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/greetTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
