--- a/app/src/main/res/layout/activity_student_page.xml
+++ b/app/src/main/res/layout/activity_student_page.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentPage">
+    tools:context=".studentSide.StudentPage">
 
     <TextView
         android:id="@+id/greetTextView"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:gravity="center"
         android:text="TextView"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
